--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       id="apple-status-bar-meta"
     /> -->
 
-    <title>Sound Board</title>
+    <title>Sound Boardd</title>
 
     <link rel="icon" type="image/png" href="assets/favicon.png" />
     <link rel="stylesheet" href="./style.css" />
