--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <!-- <meta
+    <meta
       name="viewport"
-      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+      content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover"
     />
     <meta name="theme-color" content="#121212" id="theme-color-meta" />
     <meta name="mobile-web-app-capable" content="yes" />
@@ -13,19 +13,23 @@
       name="apple-mobile-web-app-status-bar-style"
       content="#121212"
       id="apple-status-bar-meta"
-    /> -->
+    />
 
-    <title>Sound Boardd</title>
+    <title>Sound Board</title>
 
     <link rel="icon" type="image/png" href="assets/favicon.png" />
     <link rel="stylesheet" href="./style.css" />
   </head>
 
   <body>
+    <!-- Sons -->
     <audio src="./sounds/applause.mp3" id="applause"></audio>
     <audio src="./sounds/boo.mp3" id="boo"></audio>
     <audio src="./sounds/gasp.mp3" id="gasp"></audio>
+
+    <!-- Conteneur des boutons générés en JS -->
     <div id="buttons"></div>
+
     <script src="./script.js"></script>
   </body>
 </html>
