--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta
+    <!-- <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover"
     />
@@ -13,7 +13,7 @@
       name="apple-mobile-web-app-status-bar-style"
       content="#121212"
       id="apple-status-bar-meta"
-    />
+    /> -->
 
     <title>Sound Board</title>
 
