--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
 
     <title>Sound Board</title>
 
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, viewport-fit=cover"
-    />
-    <meta name="theme-color" content="#8ec5fc" />
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+<meta name="theme-color" content="#e0c3fc" />
+
 
     <link rel="icon" type="image/png" href="assets/favicon.png" />
     <link rel="stylesheet" href="./style.css" />
@@ -18,7 +16,7 @@
   <body>
     <div class="app">
       <header>
-        <h1>Sound Boardd</h1>
+        <h1>Sound Board</h1>
         <p>Appuie sur un bouton pour jouer un son</p>
       </header>
 
