--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <div class="app">
       <header>
-        <h1>Sound Board</h1>
+        <h1>Sound Boardd</h1>
         <p>Appuie sur un bouton pour jouer un son</p>
       </header>
 
