--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
 
 
     <link rel="icon" type="image/png" href="assets/favicon.png" />
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style2.css" />
   </head>
 
   <body>
     <div class="app">
       <header>
-        <h1>Sound Board</h1>
+        <h1>Sound Boarddd</h1>
         <p>Appuie sur un bouton pour jouer un son</p>
       </header>
 
