--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
 
     <title>Sound Board</title>
 
-<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-<meta name="theme-color" content="#e0c3fc" />
-
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, viewport-fit=cover"
+    />
+    <meta name="theme-color" content="#e0c3fc" />
+    <link rel="stylesheet" href="./style.css" />
 
     <link rel="icon" type="image/png" href="assets/favicon.png" />
-    <link rel="stylesheet" href="./style2.css" />
   </head>
 
   <body>
