--- a/index.html
+++ b/index.html
@@ -5,15 +5,24 @@
 
     <title>Sound Board</title>
 
-    <meta
+  <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, viewport-fit=cover"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
-    <meta name="theme-color" content="#e0c3fc" />
-    <link rel="stylesheet" href="./style.css" />
+    <meta name="theme-color" content="#121212" id="theme-color-meta" />
+    <meta name="mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta
+      name="apple-mobile-web-app-status-bar-style"
+      content="#121212"
+      id="apple-status-bar-meta"
+    />
 
-    <link rel="icon" type="image/png" href="assets/favicon.png" />
+
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="icon" type="image/png" href="assets/favicon.ico" />
   </head>
+
 
   <body>
     <div class="app">
