--- a/index.html
+++ b/index.html
@@ -5,29 +5,14 @@
 
     <title>Sound Board</title>
 
-  <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
-    />
-    <meta name="theme-color" content="#121212" id="theme-color-meta" />
-    <meta name="mobile-web-app-capable" content="yes" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
-    <meta
-      name="apple-mobile-web-app-status-bar-style"
-      content="#121212"
-      id="apple-status-bar-meta"
-    />
-
-
-    <link rel="stylesheet" href="./style.css" />
-    <link rel="icon" type="image/png" href="assets/favicon.ico" />
+    <link rel="icon" type="image/png" href="assets/favicon.png" />
+    <link rel="stylesheet" href="style.css" />
   </head>
-
 
   <body>
     <div class="app">
       <header>
-        <h1>Sound Boardd</h1>
+        <h1>Sound Board</h1>
         <p>Appuie sur un bouton pour jouer un son</p>
       </header>
 
