--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
+
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
 
-    <title>Sound Board</title>
+    <title>Sound Board Yo</title>
 
     <link rel="icon" type="image/png" href="assets/favicon.png" />
     <link rel="stylesheet" href="style.css" />
@@ -16,7 +17,7 @@
   <body>
     <div class="app">
       <header>
-        <h1>Sound Board</h1>
+        <h1>Sound Board Yo</h1>
         <p>Appuie sur un bouton pour jouer un son</p>
       </header>
 
