--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
       content="width=device-width, initial-scale=1.0, viewport-fit=cover"
     />
 
-    <title>Sound Board Yo</title>
+    <title>Sound Board</title>
 
-    <link rel="icon" type="image/png" href="assets/favicon.png" />
+    <link rel="icon" type="image/png" href="assets/icon.png" />
     <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <div class="app">
       <header>
-        <h1>Sound Board Yo</h1>
+        <h1>Sound Board</h1>
         <p>Appuie sur un bouton pour jouer un son</p>
       </header>
 
