--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="app">
       <header>
         <h1>Sound Board</h1>
-        <p>Appuie sur un bouton pour jouer un son</p>
+        <p>Appuie sur un bouton pour jouer un sonnnnnnnn</p>
       </header>
 
       <main>
