--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
 
     <title>Sound Board</title>
 
-    <link rel="icon" type="image/png" href="assets/icon.png" />
+    <link rel="icon" type="image/png" href="./assets/icon.png" />
+    <link rel="shortcut icon" href="./assets/icon.png" />
+    <link rel="apple-touch-icon" href="./assets/icon.png" />
+
     <link rel="stylesheet" href="style.css" />
   </head>
 
